--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -28,12 +28,15 @@ spec:
     spec:
       containers:
         - name: elasticsearch
+          # ✅ Option 1: garde 7.17.0 + correctif JVM
+          # (ou remplace par 7.16.3 si tu veux éviter le bug complètement)
           image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
           env:
             - name: discovery.type
               value: single-node
+            # ✅ Correctif clé pour CGroup v2 bug
             - name: ES_JAVA_OPTS
-              value: "-Xms512m -Xmx512m"
+              value: "-Xms512m -Xmx512m -Djdk.disableLastCgroup=true"
             - name: xpack.security.enabled
               value: "false"
           ports:
@@ -46,8 +49,8 @@ spec:
               memory: "1Gi"
               cpu: "500m"
           volumeMounts:
-            - mountPath: /usr/share/elasticsearch/data
-              name: elasticsearch-storage
+            - name: elasticsearch-storage
+              mountPath: /usr/share/elasticsearch/data
       volumes:
         - name: elasticsearch-storage
           persistentVolumeClaim:
